<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Day Care</string>
    <string name="title_activity_student_list">Student List</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_out">Sign In or Out</string>
    <string name="logout_title">Logout User</string>
    <string name="teach">Teacher: </string>
    <string name="submit">Submit</string>
    <string name="icon_content_description">Teddy Bear</string>

    <string-array name="navigation_drawer">
        <item name="roster">Class Roster</item>
        <item name="announcement">Announcement</item>
        <item name="notes">Notes</item>
    </string-array>

    <string name="title_admin_list">AdminFragment</string>

    <string-array name="admin_list">
        <item name="addAccounts">Add Account</item>
        <item name="editAccounts">Edit Account</item>
        <item name="addChildren">Add Child</item>
        <item name="editChildren">Edit Child Information</item>
        <item name="approveAccount">Approve Accounts</item>
        <item name="notes">Notes</item>
        <item name="childrenInOut">Sign Children In and Out</item>
    </string-array>
    <!-- String[] noteID = {"Meal", "Nap", "Accident", "Needs", "Misc"}; -->
    <string-array name="note_id">
        <item name="meal">Meal</item>
        <item name="nap">Nap</item>
        <item name="accident">Accident</item>
        <item name="needs">Needs</item>
        <item name="misc">Misc</item>
    </string-array>

    <string name="title_activity_admin">Personnel Home</string>
    <string name="title_activity_add_account">Account Information</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="street_address_label">Street</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="zip_code_label">Zip</string>
    <string name="email_label">Email</string>
    <string name="ssn_label">Social Security Number</string>
    <string name="pass_label">Password</string>
    <string name="acctType_label">Account Type</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="title_activity_student_view">Student View</string>
    <string name="pick_teacher">Pick a Teacher</string>
    <string name="add_note_title">Add a Note</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="no_label">No</string>
    <string name="title_activity_add_child">Child\'s Information</string>
    <string name="DOB_label">Date of Birth</string>
    <string name="dob_label_view">Date of Birth: </string>
    <string name="yes_label">Yes</string>
    <string name="student_name">Student\'s Name: </string>
    <string name="primary_teach_name">Primary Teacher: </string>
    <string name="primary_contact_name">Primary Contact: </string>
    <string name="title_activity_admin_add_note">Add Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_message">Enter Message Here</string>
    <string name="title_activity_approve_accounts">Approve Accounts</string>
    <string name="title_activity_sign_in_out">Sign In and Out</string>
    <string name="title_activity_triggered_signin">TriggeredSignin</string>
    <string name="title_activity_nfc">NFC</string>

</resources>
