<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.daycare.daycare.NewsFeedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/student_name_label"
            android:text="@string/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            />

        <TextView
            android:id="@+id/student_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dob_label"
            android:text="@string/dob_label_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            />
        <TextView
            android:id="@+id/dob_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
             />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/primary_teacher"
            android:text="@string/primary_teach_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            />
        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
             />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/primary_contact"
            android:text="@string/primary_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            />
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:gravity="center_vertical"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
           />
    </LinearLayout>

    <ListView
        android:id="@id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
